--- a/package.json
+++ b/package.json
@@ -7,7 +7,19 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^3.0.4"
+    "web-vitals": "^3.0.4",
+    "bootstrap": "^5.2.3",
+    "favicons": "^7.0.2",
+    "react-router-dom": "^6.6.2",
+    "animate.css": "^4.1.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "nodemailer": "^6.7.7",
+    "react-bootstrap": "^2.4.0",
+    "react-bootstrap-icons": "^1.8.4",
+    "react-icons": "^4.4.0",
+    "react-multi-carousel": "^2.8.2",
+    "react-on-screen": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
