--- a/package.json
+++ b/package.json
@@ -1,55 +1,34 @@
 {
-  "private": true,
-  "dependencies": {
-    "@emailjs/browser": "^3.10.0",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@mui/material": "^5.11.3",
-    "video-react": "^0.16.0",
-
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
-    "animate.css": "^4.1.1",
-    "@formspree/react": "^2.3.0",
-    "bootstrap": "^5.2.3",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "favicons": "^7.0.2",
-    "nodemailer": "^6.7.7",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.4.0",
-    "react-bootstrap-icons": "^1.8.4",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0",
-    "react-multi-carousel": "^2.8.2",
-    "react-on-screen": "^2.1.1",
-    "react-router-dom": "^6.6.2",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^3.0.4"
-  },
+  "name": "vincent-portfolio-site",
+  "version": "1.0.1",
+  "private": "true",
+  "description": "A personal portfolio to showcase my projects and skills.",
+  "source": "src/index.html",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "parcel",
+    "build": "parcel build"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/vincenthphung/vincentphung"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "keywords": [],
+  "author": "Vincent Phung",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/vincenthphung/vincentphung/issues"
+  },
+  "homepage": "https://github.com/vincenthphung/vincentphung#readme",
+  "devDependencies": {
+    "@parcel/transformer-sass": "^2.0.1",
+    "parcel": "^2.0.1",
+    "prettier": "^2.4.1"
+  },
+  "dependencies": {
+    "@popperjs/core": "^2.10.2",
+    "bootstrap": "^5.1.3",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
+    "vanilla-tilt": "^1.7.2"
   }
 }
