--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "A personal portfolio to showcase my projects and skills.",
   "source": "src/index.html",
   "scripts": {
-    "start": "parcel",
-    "build": "parcel build"
+    "start": "parcel src/index.html",
+    "build": "parcel build src/index.html --dist-dir build"
   },
   "repository": {
     "type": "git",
